--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
                     <p>Có hơn 100+ thể loại game chất lượng</p>
                     <p>Chúng tôi chuyên cung cấp game online thuộc nhiều thể loại: nhập vai, phiêu lưu, hành động, v.v...</p>
                 </section>
+                <!-- navbar phu -->
 
-               
+                <div class="main-nav">
+                    <div class="menu-home">
+                        <a href="htmls/news.html">News</a></li>
+                        <a href="htmls/category.html">Category</a>
+                    </div>
+                </div>
                     <h2>Sản phẩm tiêu biểu</h2>
                     <div class="show-game">
                         
