--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <!-- <img src="https://image.jimcdn.com/app/cms/image/transf/none/path/sbb12ad2eacc86c01/image/ia19c102514f92031/version/1743753306/image.png"> -->
             <nav>
-                <a href="home">Home</a>
+                <a href="home" class="nav-link active">Home</a>
                 <a href="htmls/services.html">Services</a>
                 <!-- <a href="#about">Giới thiệu</a> -->
                 <a href="htmls/contact.html">Contact</a>
